src/test/ui/issue-45157.stderr
error[E0502]: cannot borrow `u.z.c` as immutable because it is also borrowed as mutable
  --> $DIR/issue-45157.rs:37:20
   |
34 |         let mref = &mut u.s.a;
   |                    ---------- mutable borrow occurs here
...
37 |         let nref = &u.z.c;
   |                    ^^^^^^ immutable borrow occurs here

error: aborting due to previous error

